# meltano-singer-tap-smart-open

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: ci.yml
tap_smart_open/: __init__.py  streams.py  tap.py
tests/: __init__.py  test_core.py  test_tap_smart_open.py
tests/acceptance/: config.json
tests/data/: example.csv
